// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`development Adding typescript plugin to configuration 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".jsx",
      ".js",
    ],
    "plugins": Array [],
  },
}
`;

exports[`development Adding typescript plugin with fork-ts-checker-webpack-plugin options to configuration 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".jsx",
      ".js",
    ],
    "plugins": Array [],
  },
}
`;

exports[`development Adding typescript plugin with tsconfigPathsPluginOptions to configuration 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".js",
    ],
    "plugins": Array [
      TsconfigPathsPlugin {
        "apply": [MockFunction],
      },
    ],
  },
}
`;

exports[`development baseURL exists at tsconfig 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".js",
    ],
    "plugins": Array [
      TsconfigPathsPlugin {
        "apply": [MockFunction],
      },
    ],
  },
}
`;

exports[`development baseURL exists at tsconfig and adding tsconfigPathsPluginOptions 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".js",
    ],
    "plugins": Array [
      TsconfigPathsPlugin {
        "apply": [MockFunction],
      },
    ],
  },
}
`;

exports[`development tsconfig and tslint do not exist 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".js",
    ],
    "plugins": Array [],
  },
}
`;

exports[`development tsconfig jsx property exist 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".jsx",
      ".js",
    ],
    "plugins": Array [
      TsconfigPathsPlugin {
        "apply": [MockFunction],
      },
    ],
  },
}
`;

exports[`development tsconfig with single space baseUrl 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".js",
    ],
    "plugins": Array [],
  },
}
`;

exports[`production Adding typescript plugin to configuration in production mode 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "minimizer": Array [
      TerserPlugin {
        "apply": [MockFunction],
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".jsx",
      ".js",
    ],
    "plugins": Array [],
  },
}
`;

exports[`production Adding typescript plugin to configuration in production mode and passsing terser options 1`] = `
Object {
  "devtool": "inline-source-map",
  "entry": "./src/index.ts",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "test": /\\\\\\.tsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": true,
              "plugins": Array [
                "syntax-dynamic-import",
              ],
            },
          },
          Object {
            "loader": "ts-loader",
            "options": Object {
              "happyPackMode": true,
              "transpileOnly": true,
            },
          },
        ],
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.jsx\\?\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "presets": Array [
                "@babel/preset-env",
              ],
            },
          },
        ],
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "optimization": Object {
    "minimizer": Array [
      TerserPlugin {
        "apply": [MockFunction],
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "./src/__tests__///./test-project//dist",
    "publicPath": "./",
  },
  "plugins": Array [
    ForkTsCheckerWebpackPlugin {
      "apply": [MockFunction],
      "createDoneCallback": [MockFunction],
      "createEmitCallback": [MockFunction],
      "createNoopEmitCallback": [MockFunction],
      "handleServiceExit": [MockFunction],
      "handleServiceMessage": [MockFunction],
      "killService": [MockFunction],
      "pluginCompile": [MockFunction],
      "pluginDone": [MockFunction],
      "pluginEmit": [MockFunction],
      "pluginStart": [MockFunction],
      "pluginStop": [MockFunction],
      "printLoggerMessage": [MockFunction],
      "spawnService": [MockFunction],
      "validateVersions": [MockFunction],
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".jsx",
      ".js",
    ],
    "plugins": Array [],
  },
}
`;
